--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
-    "name": "startbootstrap-2-col-portfolio",
     "title": "2 Col Portfolio",
-    "description": "2 Col Portfolio is a two column portfolio template for Bootstrap created by Start Bootstrap.",
+    "name": "startbootstrap-2-col-portfolio",
     "version": "4.0.0-alpha",
+    "description": "A two column portfolio template built with Bootstrap",
+    "keywords": [
+        "css",
+        "sass",
+        "html",
+        "responsive",
+        "theme",
+        "template"
+    ],
     "homepage": "http://startbootstrap.com/template-overviews/2-col-portfolio",
-    "author": "Start Bootstrap",
-    "license": {
-        "type": "MIT",
-        "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+    "bugs": {
+        "url": "https://github.com/BlackrockDigital/startbootstrap-2-col-portfolio/issues",
+        "email": "feedback@startbootstrap.com"
     },
+    "license": "MIT",
+    "author": "Start Bootstrap",
+    "contributors": [
+        "David Miller (http://davidmiller.io/)"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/BlackrockDigital/startbootstrap-2-col-portfolio.git"
+    },
+    "dependencies": {
+        "bootstrap": "^4.0.0-alpha.6",
+        "jquery": "^3.2.1",
+        "tether": "^1.4.0"
+    },
+    "devDependencies": {
+        "browser-sync": "^2.18.8",
+        "gulp": "^3.9.1"
     }
 }
