--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "title": "2 Col Portfolio",
     "name": "startbootstrap-2-col-portfolio",
     "version": "4.0.0-alpha",
-    "description": "A two column portfolio template built with Bootstrap",
+    "description": "A two column portfolio HTML template built with Bootstrap",
     "keywords": [
         "css",
         "sass",
