--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "2 Col Portfolio",
   "name": "startbootstrap-2-col-portfolio",
-  "version": "4.0.0-alpha",
+  "version": "4.0.0-beta",
   "description": "A two column portfolio HTML template built with Bootstrap",
   "keywords": [
     "css",
