--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "theme",
     "template"
   ],
-  "homepage": "http://startbootstrap.com/template-overviews/2-col-portfolio",
+  "homepage": "https://startbootstrap.com/template-overviews/2-col-portfolio",
   "bugs": {
     "url": "https://github.com/BlackrockDigital/startbootstrap-2-col-portfolio/issues",
     "email": "feedback@startbootstrap.com"
